# sesame-robot-sim

./: .gitignore  Cargo.toml  build-sesame.sh  build.sh
.zed/: settings.json
docs/: 1118.js  1122.js  1282.js  1420.js  1438.js  1446.js  1560.js  1710.js  1740.js  1888.js  1914.js  198.js  205.js  2094.js  2184.js  2244.js  2278.js  2398.js  2586.js  2658.js  2686.js  2692.js  2962.js  3042.js  3062.js  3096.js  3182.js  3622.js  3726.js  398.js  411.js  4114.js  4120.js  4333.js  4334.js  4421.js  4508.js  4630.js  4680.js  4698.js  (+56 more)
onshape/: config.json  robot.urdf
onshape/assets/: bottom_cover.stl  femur_joint_l1.stl  femur_joint_l2.stl  femur_joint_r1.stl  femurjoint_r2.stl  foot_joint_l3.stl  foot_joint_l4.stl  foot_joint_r3.stl  foot_joint_r4.stl  internal_frame.stl  kcd1_b2_base.stl  kcd1_b2_rocker.stl  oled_128x64_0_96_v1_main.stl  sg90___micro_servo_9g___tower_pro_2_pe_a.stl  sg90_body.stl  sg90_bottom.stl  sg90_pin.stl  sg90_screw.stl  sg90_side_left.stl  sg90_side_right.stl  sg90_top.stl  top_cover.stl
sesame/: bootloader_symbols.txt  movement-sequences.h  sesame.ino
src/: builder.rs  lib.rs  main.rs  mesh.rs  mesh_sesame.rs  servo_sim.rs  urdf.rs  util.rs
src/control/: mod.rs  motion.rs  pid.rs  servo.rs
www/: package-lock.json  package.json  tsconfig.json  webpack.config.js
www/src/: editor.ts  index.ts  keys.js
www/src/assets/: README.md  demo.ino  movement-sequences.h  sesame.ino  stand_symbols.txt
www/src/types/: assets.d.ts
www/static/: index.html  robot.urdf
www/static/rom/: symbols.txt
